# claude-code-pixoo-bridge

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  display-states.md  pixoo-max-integration.md
examples/: claude-settings.local.json  pixoo-bridge.toml  pixoo-hook.sh  pixoo-statusline-chain.sh  pixoo-statusline.sh
pixoo_bridge/: __main__.py  app.py  bridge.py  macos_bluetooth_helper.py  macos_bluetooth_helper.swift  pixoo_protocol.py  proxy.py  proxy_sender.py  rendering.py  runtime_config.py
tests/: test_bridge.py  test_macos_bluetooth_helper.py  test_protocol.py  test_proxy.py  test_proxy_sender.py  test_rendering.py  test_runtime_config.py  test_transport.py
