[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-pixoo-bridge"
version = "0.1.0"
description = "Local bridge that turns Claude Code state into Pixoo scenes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pillow>=11.2,<12.0",
  "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11,<1.0",
]

[project.scripts]
pixoo-bridge = "pixoo_bridge.__main__:main"

[tool.setuptools.packages.find]
include = ["pixoo_bridge*"]

[tool.setuptools.package-data]
pixoo_bridge = ["*.swift"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["pixoo_bridge", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
